--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 2
-        versionName "1.1"
+        versionName "2.0"
     }
     productFlavors {
         xiaomi {}
@@ -82,4 +82,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    compile 'q.rorbin:badgeview:1.1.0'
 }
