--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.appjumper.silkscreen"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 18
-        versionName "2.0.2"
+        versionCode 19
+        versionName "2.0.3"
     }
     productFlavors {
         xiaomi {}
@@ -72,7 +72,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.dongjunkun:DropDownMenu:1.0.3'
     compile 'im.fir:fir-sdk:latest.integration@aar'
@@ -83,4 +82,5 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile 'q.rorbin:badgeview:1.1.1'
+    compile project(':picasso')
 }
