--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -226,6 +226,8 @@
         <activity android:name=".ui.dynamic.DynamicManageActivity" />
         <!--本地产品搜索-->
         <activity android:name=".ui.common.ProductSearchActivity" />
+        <!--原材料价格-更多-->
+        <activity android:name=".ui.trend.PriceMoreActivity" />
 
 
         <!--发布护栏网-->
