--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -208,7 +208,9 @@
         <activity android:name=".ui.inquiry.InquiryCompleteActivity" />
         <!--现货产品详情-->
         <activity android:name=".ui.home.stock.StockDetailActivity" />
-        <!--现货产品详情-->
+        <!--现货产品询价-->
+        <activity android:name=".ui.inquiry.InquiryStockActivity" />
+        <!--发布现货产品-->
         <activity android:name=".ui.my.enterprise.SpecificationStockActivity" />
         <!--添加服务成功-->
         <activity android:name=".ui.my.enterprise.AddServiceCompleteActivity" />
