--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,6 @@ dependencies {
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile 'q.rorbin:badgeview:1.1.1'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    compile 'com.contrarywind:Android-PickerView:3.2.6'
     compile project(':picasso')
 }
