--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
         targetSdkVersion 26
         versionCode 30
         versionName "3.0.4"
+        multiDexEnabled true
+
+        ndk {  abiFilters "armeabi","x86" }
     }
 
     //配置多版本的apk
@@ -97,5 +100,7 @@ dependencies {
     compile 'q.rorbin:badgeview:1.1.1'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     compile 'com.contrarywind:Android-PickerView:3.2.6'
+    compile 'com.amap.api:navi-3dmap:latest.integration'
+    compile 'com.amap.api:search:latest.integration'
     compile project(':picasso')
 }
