--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,7 +141,7 @@
         <!--询价详情已报价-->
         <activity android:name=".ui.money.InquiryDetailsAlreadyActivity" />
         <!--企业认证-->
-        <activity android:name=".ui.my.enterprise.EnterpriseAuthenticationActivity" />
+        <activity android:name=".ui.my.enterprise.EnterpriseAuthenticationActivity" android:configChanges="orientation|screenSize|keyboardHidden|keyboard|"/>
         <!--认证管理-->
         <activity android:name=".ui.my.enterprise.AuthenticationAdministrationActivity" />
         <!--服务管理-->
@@ -189,7 +189,7 @@
         <!--发布历史-->
         <activity android:name=".ui.home.ReleaseHistoryActivity" />
         <!--个人认证-->
-        <activity android:name=".ui.my.PersonalAuthenticationActivity" />
+        <activity android:name=".ui.my.PersonalAuthenticationActivity" android:configChanges="orientation|screenSize|keyboardHidden|keyboard|"/>
         <!--单选-->
         <activity android:name=".ui.inquiry.SingleChoiceActivity" />
         <!--询价更多-->
@@ -291,11 +291,11 @@
 
 
         <!--司机认证第一步-->
-        <activity android:name=".ui.my.driver.DriverAuthFirstActivity" />
+        <activity android:name=".ui.my.driver.DriverAuthFirstActivity" android:configChanges="orientation|screenSize|keyboardHidden|keyboard|"/>
         <!--司机认证第二步-->
-        <activity android:name=".ui.my.driver.DriverAuthSecondActivity" />
+        <activity android:name=".ui.my.driver.DriverAuthSecondActivity" android:configChanges="orientation|screenSize|keyboardHidden|keyboard|"/>
         <!--司机认证第三步-->
-        <activity android:name=".ui.my.driver.DriverAuthThirdActivity" />
+        <activity android:name=".ui.my.driver.DriverAuthThirdActivity" android:configChanges="orientation|screenSize|keyboardHidden|keyboard|"/>
         <!--司机认证提交成功-->
         <activity android:name=".ui.my.driver.DriverAuthCompleteActivity" />
         <!--发布空车配货订单-->
@@ -494,7 +494,27 @@
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="${UMENG_CHANNEL_VALUE}"></meta-data>
+
+
+        <!--支付宝-->
+        <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
+        <activity
+            android:name="com.alipay.sdk.app.H5AuthActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
+
     </application>
+
+
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -515,7 +535,6 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.GET_TASKS" />
@@ -525,8 +544,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WIRTE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
