--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ android {
         applicationId "com.appjumper.silkscreen"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 33
-        versionName "3.1.6"
+        versionCode 35
+        versionName "3.1.8"
         multiDexEnabled true
 
-        ndk {  abiFilters "armeabi","x86" }
+        ndk {  abiFilters "armeabi","x86","mips" }
     }
 
     //配置多版本的apk
@@ -102,5 +102,6 @@ dependencies {
     compile 'com.contrarywind:Android-PickerView:3.2.6'
     compile 'com.amap.api:navi-3dmap:latest.integration'
     compile 'com.amap.api:search:latest.integration'
+    compile 'org.robolectric:shadows-multidex:3.3.2'
     compile project(':picasso')
 }
